--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,15 @@
-#Tue Jun 14 13:52:46 IST 2016
-oracle.commons=../../Oracle/Oracle12c/Middleware/Oracle_Home/oracle_common/
-install.dir=../../Oracle/Oracle12c/Middleware/Oracle_Home/
+#Tue Jun 14 15:18:25 IST 2016
+oracle.commons=../Oracle/Oracle12c/Middleware/Oracle_Home/oracle_common/
+install.dir=../Oracle/Oracle12c/Middleware/Oracle_Home/
 oracle.jdeveloper.ant.library=C\:\\Oracle\\Oracle12c\\Middleware\\Oracle_Home\\jdeveloper\\jdev\\/lib/ant-jdeveloper.jar
-oracle.home=../../Oracle/Oracle12c/Middleware/Oracle_Home/jdeveloper/
-oracle.jdeveloper.workspace.path=C\:\\keste\\FURCustomFeaturesADFApp\\FURCustomFeaturesADFApp_v10.jws
+output.dir=classes
+oracle.home=../Oracle/Oracle12c/Middleware/Oracle_Home/jdeveloper/
+javac.deprecation=off
+oracle.jdeveloper.workspace.path=C\:\\FURtest\\FURCustomFeaturesADFApp_v10.jws
+javac.debug=on
 oracle.jdeveloper.deploy.profile.name=*
-oracle.jdeveloper.deploy.dir=C\:\\keste\\FURCustomFeaturesADFApp\\deploy
+oracle.jdeveloper.deploy.dir=C\:\\FURtest\\ViewController\\deploy
 oracle.jdeveloper.ojdeploy.path=C\:\\Oracle\\Oracle12c\\Middleware\\Oracle_Home\\jdeveloper\\jdev\\bin\\ojdeploy.exe
-oracle.jdeveloper.deploy.outputfile=C\:\\keste\\FURCustomFeaturesADFApp\\deploy\\${profile.name}
+javac.nowarn=off
+oracle.jdeveloper.project.name=ViewController
+oracle.jdeveloper.deploy.outputfile=C\:\\FURtest\\ViewController\\deploy\\${profile.name}
