--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
-#Tue Jun 14 15:18:25 IST 2016
+#Wed Jun 15 11:44:13 IST 2016
 oracle.commons=../Oracle/Oracle12c/Middleware/Oracle_Home/oracle_common/
 install.dir=../Oracle/Oracle12c/Middleware/Oracle_Home/
 oracle.jdeveloper.ant.library=C\:\\Oracle\\Oracle12c\\Middleware\\Oracle_Home\\jdeveloper\\jdev\\/lib/ant-jdeveloper.jar
-output.dir=classes
+output.dir=ViewController/classes
 oracle.home=../Oracle/Oracle12c/Middleware/Oracle_Home/jdeveloper/
 javac.deprecation=off
 oracle.jdeveloper.workspace.path=C\:\\FURtest\\FURCustomFeaturesADFApp_v10.jws
